fix picker and menu z-index

--- a/mdui/src/components/input/picker.less
+++ b/mdui/src/components/input/picker.less
@@ -20,6 +20,7 @@
   /* 下拉内容 */
   .mdui-picker-content {
     position: absolute;
+    z-index: calc(@z-index-overlay + 1);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -44,10 +45,6 @@
     will-change: transform, opacity, visibility;
     -webkit-overflow-scrolling: touch;
     .mdui-shadow(8);
-
-    &.mdui-overlay-parent {
-      z-index: calc(@z-index-overlay + 1);
-    }
   }
 }
 
